--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello cousera</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<title>Hello cousera</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-Helllo cousera!
+<H1>Helllo cousera!</H1>
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sl">
+    <h1 id="h1">Chicken </h1>
+    <p>aaaaaaaaaaaa</p></div> 
+  <div class="col-lg-4 col-md-6 col-sl">
+    <h1 id="h1">Beef</h1>
+    <p>bbbbb</p></div> 
+  <div class="col-lg-4 col-md-12 col-sl">
+    <h1 id="h1">Vegetarian</h1>
+    <p>ccccccccccccc</p></div> 
+ Let's try again, and again,again ...
 </body>
 </html>
